--- a/pages/3753.html
+++ b/pages/3753.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -310,40 +309,44 @@ margin-left: 0em;
 <div id="revision">
     <h1 id='definition'>Definition</h1>
 
-<p>A <strong>semipresheaf</strong> on a <a class='existingWikiWord' href='/nlab/show/semicategory'>semicategory</a> <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/semifunctor'>semifunctor</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>→</mo><mi>Set</mi></mrow><annotation encoding='application/x-tex'>
+<p>A <strong>semipresheaf</strong> on a <a class='existingWikiWord' href='/nlab/show/semicategory'>semicategory</a> <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/semifunctor'>semifunctor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>→</mo><mi>Set</mi></mrow><annotation encoding='application/x-tex'>
  F : C^{op} \to Set
 
 </annotation></semantics></math></div>
-<p>from the opposite semicategory <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>C^{op}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> to the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a> of <a class='existingWikiWord' href='/nlab/show/set'>set</a>s.</p>
+<p>from the opposite semicategory <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>C^{op}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> to the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a> of <a class='existingWikiWord' href='/nlab/show/set'>set</a>s.</p>
 
-<p>The <strong>category of semipresheaves</strong> on <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><mi>Set</mi><msub><mo stretchy='false'>]</mo> <mi>semi</mi></msub></mrow><annotation encoding='application/x-tex'>[C^{op},Set]_{semi}</annotation></semantics></math>, or just <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><mi>Set</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[C^{op},Set]</annotation></semantics></math> when the context is clear has:</p>
+<p>The <strong>category of semipresheaves</strong> on <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><mi>Set</mi><msub><mo stretchy='false'>]</mo> <mi>semi</mi></msub></mrow><annotation encoding='application/x-tex'>[C^{op},Set]_{semi}</annotation></semantics></math>, or just <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><mi>Set</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[C^{op},Set]</annotation></semantics></math> when the context is clear has:</p>
 
 <ul>
 <li>
-<p>semifunctors <math class='maruku-mathml' display='inline' id='mathml_397a3ae75183c01e276f45d82d6d6269bf9cd3d5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>→</mo><mi>Set</mi></mrow><annotation encoding='application/x-tex'>F : C^{op} \to Set</annotation></semantics></math> as objects;</p>
+<p>semifunctors <math class='maruku-mathml' display='inline' id='mathml_74af9e89aba659eaef20eda00024bb233e3315d4_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>→</mo><mi>Set</mi></mrow><annotation encoding='application/x-tex'>F : C^{op} \to Set</annotation></semantics></math> as objects;</p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformations</a> between such semifunctors as morphisms.</p>
 </li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on March 30, 2010 20:12:05 
-  by <a class="existingWikiWord" href="/nlab/show/Harry+Gindi">Harry</a>
-  (67.194.132.91)
+  <p>
+  Last revised on June  5, 2018 at 09:10:11.
+  See the <a href="https://ncatlab.org/nlab/history/semipresheaf" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/semipresheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/semipresheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/semipresheaf/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/semipresheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/semipresheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/semipresheaf/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/semipresheaf" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/semipresheaf" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/semipresheaf" id="view_source" rel="nofollow">Source</a>
