--- a/pages/15954.html
+++ b/pages/15954.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -481,7 +480,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -646,7 +645,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <strong>bagdomain topos construction</strong> is the topos analogue of the powerdomain construction in domain-theoretic database theory. Roughly speaking, an object <math class='maruku-mathml' display='inline' id='mathml_696848f93342fd42d8101c889791eba89fc41a43_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is replaced by an object <math class='maruku-mathml' display='inline' id='mathml_696848f93342fd42d8101c889791eba89fc41a43_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>X&#39;</annotation></semantics></math> such that points of <math class='maruku-mathml' display='inline' id='mathml_696848f93342fd42d8101c889791eba89fc41a43_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>X&#39;</annotation></semantics></math> correspond to sets (=‘bags’) of points of <math class='maruku-mathml' display='inline' id='mathml_696848f93342fd42d8101c889791eba89fc41a43_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<p>The <strong>bagdomain topos construction</strong> is the topos analogue of the powerdomain construction in domain-theoretic database theory. Roughly speaking, an object <math class='maruku-mathml' display='inline' id='mathml_d56c2cc3ccccaab0ac01b3182e9862d49d94a1ff_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is replaced by an object <math class='maruku-mathml' display='inline' id='mathml_d56c2cc3ccccaab0ac01b3182e9862d49d94a1ff_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>X&#39;</annotation></semantics></math> such that points of <math class='maruku-mathml' display='inline' id='mathml_d56c2cc3ccccaab0ac01b3182e9862d49d94a1ff_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>X&#39;</annotation></semantics></math> correspond to sets (=‘bags’) of points of <math class='maruku-mathml' display='inline' id='mathml_d56c2cc3ccccaab0ac01b3182e9862d49d94a1ff_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -657,6 +656,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Artin+gluing'>Artin gluing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/lax-idempotent+2-monad'>lax-idempotent 2-monad</a></p>
 </li>
 </ul>
 
@@ -698,19 +701,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November  5, 2014 13:46:10 
-  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.139.156)
+  <p>
+  Last revised on June  6, 2018 at 06:37:07.
+  See the <a href="https://ncatlab.org/nlab/history/bagdomain topos" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bagdomain+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/bagdomain+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bagdomain+topos/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/bagdomain+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bagdomain+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/bagdomain topos/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/bagdomain+topos" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/bagdomain+topos" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/bagdomain+topos" id="view_source" rel="nofollow">Source</a>
