--- a/pages/5317.html
+++ b/pages/5317.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -411,7 +410,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#homotopy_type'>Homotopy type</a></li><li><a href='#truncations'>Truncations</a></li><li><a href='#as_an_ring'>As an <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-ring</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#homotopy_type'>Homotopy type</a></li><li><a href='#truncations'>Truncations</a></li><li><a href='#as_an_ring'>As an <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-ring</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
 <p>The <strong>sphere spectrum</strong> is the <a class='existingWikiWord' href='/nlab/show/suspension+spectrum'>suspension spectrum</a> of the point.</p>
@@ -426,11 +425,11 @@ margin-left: 0em;
 
 <h3 id='truncations'>Truncations</h3>
 
-<p><a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy colimits</a> of <a class='existingWikiWord' href='/nlab/show/simplicial+diagram'>simplicial diagrams</a> of <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/n-truncated+object+of+an+%28infinity%2C1%29-category'>truncated</a> <a class='existingWikiWord' href='/nlab/show/connective+spectrum'>connective spectra</a> for <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/module+spectrum'>modules</a> over the <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-truncation <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>τ</mi> <mrow><mo>≤</mo><mi>k</mi></mrow></msub><mi>𝕊</mi></mrow><annotation encoding='application/x-tex'>\tau_{\leq k}\mathbb{S}</annotation></semantics></math> of the sphere spectrum.</p>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy colimits</a> of <a class='existingWikiWord' href='/nlab/show/simplicial+diagram'>simplicial diagrams</a> of <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/n-truncated+object+of+an+%28infinity%2C1%29-category'>truncated</a> <a class='existingWikiWord' href='/nlab/show/connective+spectrum'>connective spectra</a> for <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/module+spectrum'>modules</a> over the <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-truncation <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>τ</mi> <mrow><mo>≤</mo><mi>k</mi></mrow></msub><mi>𝕊</mi></mrow><annotation encoding='application/x-tex'>\tau_{\leq k}\mathbb{S}</annotation></semantics></math> of the sphere spectrum.</p>
 
-<h3 id='as_an_ring'>As an <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-ring</h3>
+<h3 id='as_an_ring'>As an <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-ring</h3>
 
-<p>The sphere spectrum is naturally an <a class='existingWikiWord' href='/nlab/show/E-infinity-ring'>E-∞ ring</a> and in fact is the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a> in the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> of <a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectra</a>. It is the higher version of the <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/integer'>integer</a>s.</p>
+<p>The sphere spectrum is naturally an <a class='existingWikiWord' href='/nlab/show/E-infinity-ring'>E-∞ ring</a> and in fact is the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a> in the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> of <a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectra</a>. It is the higher version of the <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Z}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/integer'>integer</a>s.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -474,11 +473,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Karol+Szumi%C5%82o'>Karol Szumiło</a>, <em>Postnikov tower of the sphere spectrum</em>, Master thesis 2009 (<a href='https://apd.uw.edu.pl/en/diplomas/bsc-msc/62580/'>web</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Karol+Szumi%C5%82o'>Karol Szumilo</a>, <em>Postnikov tower of the sphere spectrum</em>, Master thesis 2009 (<a href='https://apd.uw.edu.pl/en/diplomas/bsc-msc/62580/'>web</a>)</p>
 </li>
 
 <li>
-<p>Katja Hutschenreuter, <em>On rigidity of the ring spectra <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>P</mi> <mi>m</mi></msub><msub><mi>𝕊</mi> <mrow><mo stretchy='false'>(</mo><mi>p</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>P_m \mathbb{S}_{(p)}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_5561c678de2123cc31e3cb766d6d53dd03cfbd73_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mi>o</mi></mrow><annotation encoding='application/x-tex'>k o</annotation></semantics></math></em>, (2012) (<a href='http://www.math.uni-bonn.de/people/grk1150/DISS/dissertation-hutschenreuter.pdf'>pdf</a>)</p>
+<p>Katja Hutschenreuter, <em>On rigidity of the ring spectra <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>P</mi> <mi>m</mi></msub><msub><mi>𝕊</mi> <mrow><mo stretchy='false'>(</mo><mi>p</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>P_m \mathbb{S}_{(p)}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_c90a388f2e1809b499ac17ba55f03f0132be7b89_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mi>o</mi></mrow><annotation encoding='application/x-tex'>k o</annotation></semantics></math></em>, (2012) (<a href='http://www.math.uni-bonn.de/people/grk1150/DISS/dissertation-hutschenreuter.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -499,19 +498,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  5, 2016 06:56:21 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (86.187.77.97)
+  <p>
+  Last revised on June  6, 2018 at 12:41:17.
+  See the <a href="https://ncatlab.org/nlab/history/sphere spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sphere+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sphere+spectrum/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/sphere+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sphere+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/sphere+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sphere+spectrum/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/sphere+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sphere+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/sphere spectrum/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/sphere+spectrum" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/sphere+spectrum" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/sphere+spectrum" id="view_source" rel="nofollow">Source</a>
